--- a/Course3_Week1_advance-computer-vision/W1/ungraded_labs/C3_W1_Lab_1_transfer_learning_cats_dogs.ipynb
+++ b/Course3_Week1_advance-computer-vision/W1/ungraded_labs/C3_W1_Lab_1_transfer_learning_cats_dogs.ipynb
@@ -281,7 +281,8 @@
       },
       "outputs": [],
       "source": [
-        "weights_url = \"https://storage.googleapis.com/tensorflow-3-public/models/inception_v3_weights_tf_dim_ordering_tf_kernels_notop.h5\"\n",
+        "# Outdated Link: \"https://storage.googleapis.com/tensorflow-3-public/models/inception_v3_weights_tf_dim_ordering_tf_kernels_notop.h5\"\n",
+        "weights_url = \"https://storage.googleapis.com/mledu-datasets/inception_v3_weights_tf_dim_ordering_tf_kernels_notop.h5\"\n",
         "weights_file = \"inception_v3.h5\"\n",
         "urllib.request.urlretrieve(weights_url, weights_file)\n",
         "\n",
