week 6 - dee_assignment2

--- a/Course3_Week6_advance-computer-vision/W2/assignment/C3W2_Assignment.ipynb
+++ b/Course3_Week6_advance-computer-vision/W2/assignment/C3W2_Assignment.ipynb
@@ -2927,6 +2927,58 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "import os\n",
+        "\n",
+        "gif_path = './zombie-anim.gif'\n",
+        "target_mb = 15\n",
+        "\n",
+        "# Check if file exists\n",
+        "if os.path.exists(gif_path):\n",
+        "    # Get current size in MB\n",
+        "    current_size_mb = os.path.getsize(gif_path) / (1024 * 1024)\n",
+        "    print(f\"Current GIF size: {current_size_mb:.2f} MB\")\n",
+        "\n",
+        "    if current_size_mb > target_mb:\n",
+        "        print(f\"File is larger than {target_mb}MB. Compressing...\")\n",
+        "\n",
+        "        # 1. Install gifsicle (a powerful command-line GIF tool)\n",
+        "        # We use os.system to run shell commands from Python\n",
+        "        os.system('apt-get update -qq && apt-get install -y gifsicle > /dev/null')\n",
+        "\n",
+        "        # 2. Run compression\n",
+        "        # -O3: Maximum optimization level\n",
+        "        # --lossy=80: Allows slight noise to drastically reduce file size (like a JPEG)\n",
+        "        compressed_path = './zombie-anim-compressed.gif'\n",
+        "        command = f'gifsicle -O3 --lossy=80 < \"{gif_path}\" > \"{compressed_path}\"'\n",
+        "        os.system(command)\n",
+        "\n",
+        "        # 3. Check new size\n",
+        "        new_size_mb = os.path.getsize(compressed_path) / (1024 * 1024)\n",
+        "        print(f\"Compressed GIF size: {new_size_mb:.2f} MB\")\n",
+        "\n",
+        "        # 4. Replace the original if we actually saved space\n",
+        "        if new_size_mb < current_size_mb:\n",
+        "            os.rename(compressed_path, gif_path)\n",
+        "            print(\"Success! Original file updated.\")\n",
+        "        else:\n",
+        "            print(\"Compression didn't reduce size (file might already be optimized).\")\n",
+        "            if os.path.exists(compressed_path):\n",
+        "                os.remove(compressed_path)\n",
+        "    else:\n",
+        "        print(\"Great! The file is already under the limit.\")\n",
+        "\n",
+        "else:\n",
+        "    print(f\"Error: Could not find {gif_path}\")"
+      ],
+      "metadata": {
+        "id": "Yjq0jAFPEsDz"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "dcJHinV3nS1O"
