week 7 - Mask RCNN to detect Dogs Modeling

--- a/Course3_Week7_advance-computer-vision2/W3/ungraded_labs/C3_W3_Lab_3_Mask-RCNN-ImageSegmentation.ipynb
+++ b/Course3_Week7_advance-computer-vision2/W3/ungraded_labs/C3_W3_Lab_3_Mask-RCNN-ImageSegmentation.ipynb
@@ -236,7 +236,7 @@
         "# Choose one and use as key for TEST_IMAGES below:\n",
         "# ['Beach', 'Street', 'Dogs','Phones']\n",
         "\n",
-        "image_path = TEST_IMAGES['Street']\n",
+        "image_path = TEST_IMAGES['Dogs']\n",
         "\n",
         "image_np = load_image_into_numpy_array(image_path)\n",
         "\n",
@@ -368,18 +368,16 @@
     }
   ],
   "metadata": {
-    "accelerator": "TPU",
+    "accelerator": "GPU",
     "colab": {
       "name": "C3_W3_Lab_3_Mask-RCNN-ImageSegmentation.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "toc_visible": true,
-      "gpuType": "V28",
+      "gpuType": "T4",
       "include_colab_link": true
     },
     "kernelspec": {
-      "display_name": "Python 3 (ipykernel)",
-      "language": "python",
+      "display_name": "Python 3",
       "name": "python3"
     },
     "language_info": {
