--- a/Course3_Week7_advance-computer-vision2/W3/ungraded_labs/C3_W3_Lab_3_Mask-RCNN-ImageSegmentation.ipynb
+++ b/Course3_Week7_advance-computer-vision2/W3/ungraded_labs/C3_W3_Lab_3_Mask-RCNN-ImageSegmentation.ipynb
@@ -236,7 +236,7 @@
         "# Choose one and use as key for TEST_IMAGES below:\n",
         "# ['Beach', 'Street', 'Dogs','Phones']\n",
         "\n",
-        "image_path = TEST_IMAGES['Dogs']\n",
+        "image_path = TEST_IMAGES['Dogs'] # i changed this -- dee\n",
         "\n",
         "image_np = load_image_into_numpy_array(image_path)\n",
         "\n",
