week 8 - GradCAM (Gradient Class Activation Map) Modeling -- with dependency errors, must require Python 3.9 or 3.10) --

--- a/Course3_Week8_advance-computer-vision3/W4/ungraded_labs/C3_W4_Lab_4_GradCam.ipynb
+++ b/Course3_Week8_advance-computer-vision3/W4/ungraded_labs/C3_W4_Lab_4_GradCam.ipynb
@@ -34,6 +34,17 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "!pip install imgaug # remember to restart after this installation, there had been dependency problems -- dee"
+      ],
+      "metadata": {
+        "id": "PXfRnATw2Q4U"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "id": "7B7AHdVuCA25"
